Fixed visibility

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 @import url('graphiql/graphiql.css');
 @import url('./discovery.css');
 
-.graphiql-container {
-    visibility: hidden;
-}
 .graphiql-container .editorBar {
     height: 1vh;
     color: red;
